rename to Node Static Stuff

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "static-node-server",
+  "name": "node-static-stuff",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
